# sublime-extendible-exec

./: .gitignore  LICENSE  README  execpp.py  execpp.sublime-commands  execpp.sublime-syntax  execpp_yaml.py  pyproject.toml
.github/workflows/: publish.yml
lib/: environment.py  process.py  yaml_config.py
tests/: test_environment.py  test_process.py  test_yaml_build_config.py
