[project]
name = "extendible-exec"
requires-python = ">= 3.8"
description = """
    Very simple, and incomplete, extension of Sublime Text's built-in build system.
"""
readme = {file = "README", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "types-PyYAML",
]

[tool.pytest.ini_options]
pythonpath = [
    '.'
]
testpaths = [
    'tests/'
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
exclude = [
    # Sublime files cannot currently be checked due to the python files not
    # being available to them.
    "execpp.py",
    "execpp_yaml.py",
]

[tool.pylint]
ignore = [
    "execpp.py",
    "execpp_yaml.py",
]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
]
max-line-length = 120
